# android-apk-patch-update

./: README.md  build.gradle  settings.gradle
android-apk-diff/: diff.sh
android-apk-patch/: README.md  build.gradle
android-apk-patch/src/main/: AndroidManifest.xml
android-apk-patch/src/main/cpp/: com_gainscha_bspatch_jni.cpp  file_patcher.c
android-apk-patch/src/main/cpp/bspatch/: CMakeLists.txt
android-apk-patch/src/main/cpp/bz2/: CMakeLists.txt  unzcrash.c
android-apk-patch/src/test/java/com/gainscha/bspatch/: ExampleUnitTest.java
apk-diff/: diff.sh
apk-patch/: build.gradle  consumer-rules.pro
apk-patch/src/androidTest/java/com/gainscha/bspatch/: ExampleInstrumentedTest.java
apk-patch/src/main/cpp/: CMakeLists.txt  file_patcher.h  test.cpp
apk-patch/src/main/cpp/bspatch/: bspatch.c  bspatch.h
apk-patch/src/main/cpp/bz2/: bzip2recover.c
apk-patch/src/main/java/com/gainscha/bspatch/: BsPatch.java
app/: build.gradle
app/src/androidTest/java/com/github/jeffery/patch/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/github/jeffery/patch/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/github/jeffery/patch/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
